Issue #625: WIP Display Regex Error Messages

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.InputFields.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.InputFields.css
@@ -1040,3 +1040,8 @@ div.InputField_ToolbarContainer ul li a:hover {
 }
 
 } /* end @media */
+
+input.Error ~ div.TooltipErrorMessage {
+    display: block;
+    color: red;
+}
